--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 <script src="/socket.io/socket.io.js"></script>
 <script src="js/jquery-1.6.2.min.js"></script>
 <script src="js/halloween-bats.js"></script>
-<script src="js/jquery.raptorize.1.0.js"></script>
+<script src="js/raptor.js"></script>
 <script src="js/utility.js"></script>
 <script src="js/reward-hamster-cannon.js"></script>
 <script src="js/reward-hamster-train.js"></script>
